# langextract_qwen

./: .gitignore  readme.md  requirement.txt  test.py  test_plugin.py
qwen_provider/: README.md  pyproject.toml
qwen_provider/langextract_provider_qwen/: __init__.py  provider.py
