[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langextract-provider-qwen"
version = "0.1.0"
description = "LangExtract provider for Qwen via DashScope OpenAI-compatible API"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langextract>=1.0.0",
  "openai>=1.0.0",
]

[project.entry-points."langextract.providers"]
qwen = "langextract_provider_qwen.provider:QwenLanguageModel"
